tests/ui/compile-fail/pin_data/unexpected_args.stderr
error: compile_error! takes 1 argument
 --> tests/ui/compile-fail/pin_data/unexpected_args.rs:3:1
  |
3 | #[pin_data(Bar)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Wrong parameters to `#[pin_data]`, expected nothing or `PinnedDrop`, got '{}'.
 --> tests/ui/compile-fail/pin_data/unexpected_args.rs:3:1
  |
3 | #[pin_data(Bar)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
